Update azure-pipelines.yml for Azure Pipelines
added test run

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,20 @@ stages:
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
 
+    - script: |
+        python -m pip install --upgrade pip
+        pip install setup
+        pip install -r requirements.txt
+        pip install --upgrade flask werkzeug
+        python -m unittest discover -s tests -p 'test.py'
+      workingDirectory: $(projectRoot)
+      displayName: 'Execute test case'
+
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: '**/TEST-*.xml'
+
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
